# zoom-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_server.py
.claude/: settings.local.json
docs/: authentication.md  best-practices.md  quickstart.md  testing.md  zoom-features.md
docs/zoom_example_python/: zoom.py
src/: server.py
src/config/: settings.py  zoom_auth.py  zoom_fuzzy.py  zoom_hierarchy.py
